# DictionaryQT

./: README.md
CPlusPlusProjects/: CMakeLists.txt  main.cpp
CPlusPlusProjects/DictionaryQT/DictionaryQT/: mainwindow.cpp  mainwindow.h
